# borealis-engine-lib

./: .gitignore  .gitmodules  CHANGES.md  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  default_config.json  nearcore_config.json  rebuild-contracts  rust-toolchain
.github/: ci-deps.sh  near_core_changelog_update.py
.github/scripts/: system-info.sh
.github/workflows/: check-nearcore-releases.yml  daily-network-tests.yml  docker-ghcr.yml  docker.yml  pr-update-nearcore-deps.yml  rust.yml  update-nearcore.yml
aurora-standalone/engine/: Cargo.toml
aurora-standalone/engine/src/: lib.rs  sync.rs  types.rs
aurora-standalone/engine/src/res/: block_66381607.json
aurora-standalone/refiner-types/: Cargo.toml
aurora-standalone/refiner-types/src/: aurora_block.rs  bloom.rs  lib.rs  near_block.rs  utils.rs
engine/: Cargo.toml
engine/src/: batch_tx_processing.rs  contract.rs  fetch_contract.rs  gas.rs  lib.rs  log_file.rs  runner.rs  storage_ext.rs  sync.rs  tests.rs  types.rs
engine/src/contract/: fetch.rs  github.rs  mod.rs  tests.rs  version.rs
engine/src/res/: aurora-engine-test.wasm  block_105089746.json  block_71771951.json  call_trace.json  contract.aurora.block66381606.minimal.json  create_trace.json
engine/src/res/deploy/: 217143860.json  217143880.json  217143901.json  217143921.json  217143934.json
engine/src/tracing/: lib.rs  mod.rs
engine/src/tracing/alchemy/: mod.rs  serialization.rs
engine/src/tracing/alchemy/conversion/: mod.rs  sum_trie.rs  tests.rs
engine/src/types/: block_id.rs  eth_call_request.rs  gas_limit.rs  mod.rs  state_override.rs
etc/integration-tests/: Cargo.toml
etc/integration-tests/src/: ansi_utils.rs  lib.rs  nearcore_utils.rs  parse_logs.rs  refiner_utils.rs  toml_utils.rs
etc/res/: aurora-engine-3.1.0.wasm  aurora-engine-3.2.0.wasm  aurora-engine-3.3.0.wasm  aurora-engine-3.3.1.wasm  aurora-engine-3.4.0.wasm  aurora-engine-3.5.0.wasm  aurora-engine-3.6.0.wasm  aurora-engine-3.6.1.wasm  aurora-engine-3.6.2.wasm  aurora-engine-3.6.3.wasm  aurora-engine-3.6.4-ext-connector.wasm  aurora-engine-3.6.4.wasm  aurora-engine-3.7.0-ext-connector.wasm  aurora-engine-3.7.0.wasm  aurora-engine-3.9.0-ext-connector.wasm  aurora-engine-3.9.0.wasm  aurora-engine-3.9.1-ext-connector.wasm  aurora-engine-3.9.1.wasm  aurora-engine-3.9.2-ext-connector.wasm  aurora-engine-3.9.2.wasm
refiner-app/: Cargo.toml
refiner-app/src/: cli.rs  config.rs  dump.rs  main.rs  socket.rs  store.rs
refiner-app/src/conversion/: mod.rs
refiner-app/src/input/: data_lake.rs  data_lake_with_trait.rs  mod.rs  nearcore.rs
refiner-app/src/tests/res/: aurora_state_minimal.json  test_estimate_gas_input.hex
refiner-lib/: Cargo.toml  build.rs
refiner-lib/blocks/: block-34834053.json  block-51188690.json  block-81206675.json
refiner-lib/src/: hashchain.rs  kind.rs  legacy.rs  lib.rs  metrics.rs  near_stream.rs  prometheus.rs  prometheus_utils.rs  refiner.rs  refiner_inner.rs  refiner_with_trait.rs  signal_handlers.rs  storage.rs  tests.rs  tx_hash_tracker.rs  utils.rs
refiner-lib/tests/res/: aurora-block-51188690.hex  aurora-engine-test.wasm  block-134585465.json  block-34834052.json  block-51188689.json  block-55905793.json  block-70834059.json  block-70834061.json  block-75306841.json  block-82654651.json  block-84423722.json  block-89402026.json  block_125229395.json  block_42598892.json  sate_H7Bfh9qCzWbJW9acao8B2jFMTrkfc31toczmTcMv7hY7.json  state_EVVnmqiPm6efCJGWLS5DgMTq3spVnevvh4fEgvc2e2Hz.json  testnet-block-120572296.json  testnet-block-232952651.json  testnet-block-234187695.json  testnet_block_182018895.json
refiner-rpc-app/: Cargo.toml
refiner-rpc-app/src/: main.rs
refiner-types/: Cargo.toml
refiner-types-crates-io/: Cargo.toml
refiner-types-crates-io/src/: lib.rs
refiner-types/benches/: convert.rs
refiner-types/src/: aurora_block.rs  bloom.rs  conversion.rs  lib.rs  near_block.rs  source_config.rs  utils.rs
refiner-types/src/conversion/: data_lake.rs  data_lake_conversion.rs  mod.rs  nearcore.rs
refiner-types/src/res/: aurora_70077007.json
refiner-types/tests/res/: block_190534818_branch_main.json  streamer_message_190534818_branch_remove_custom_indexer.json
refiner-types/tests/res/aurora_block/: aurora_70077007.json
refiner-types/tests/res/near_block/: block_151768255_mainnet.json
