[workspace]
members = [
    "engine",
    "refiner-lib",
    "refiner-types",
    "refiner-app",
    "etc/integration-tests",
]
resolver = "2"

[workspace.package]
authors = ["Aurora Labs <hello@aurora.dev>"]
version = "0.30.9-2.8.0-rc.1"
edition = "2024"
homepage = "https://github.com/aurora-is-near/aurora-standalone"
repository = "https://github.com/aurora-is-near/aurora-standalone"
license = "CC0-1.0"

[workspace.dependencies]
actix = "0.13"
anyhow = "1"
bytes = "1.10"
aurora-engine = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "feat/wasm-tracing", default-features = false, features = ["std", "tracing", "log", "impl-serde"] }
aurora-engine-transactions = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "feat/wasm-tracing", default-features = false, features = ["std", "impl-serde"] }
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "feat/wasm-tracing", default-features = false, features = ["std", "impl-serde"] }
aurora-engine-sdk = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "feat/wasm-tracing", default-features = false, features = ["std"] }
aurora-engine-modexp = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "feat/wasm-tracing", default-features = false, features = ["std"] }
aurora-engine-hashchain = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "feat/wasm-tracing", default-features = false, features = ["std"] }
engine-standalone-storage = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "feat/wasm-tracing", default-features = false }
engine-standalone-tracing = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "feat/wasm-tracing", default-features = false, features = ["impl-serde"] }
aurora-refiner-lib = { path = "refiner-lib" }
aurora-refiner-types = { path = "refiner-types" }
aurora-standalone-engine = { path = "engine" }
borsh = { version = "1", features = ["borsh-derive"] }
byteorder = "1"
clap = { version = "4", features = ["derive"] }
derive_builder = "0.20"
fixed-hash = "0.8"
futures = "0.3"
hex = "0.4"
impl-serde = "0.5"
lazy_static = "1"
lru = "0.12"
near-crypto = { git = "https://github.com/near/nearcore", tag = "2.8.0-rc.1" }
near-crypto-crates-io = { version = "0.31", package = "near-crypto" }
near-indexer = { git = "https://github.com/near/nearcore", tag = "2.8.0-rc.1" }
near-jsonrpc-client = "0.18.0"
near-jsonrpc-primitives = "0.31.1"
near-parameters = { git = "https://github.com/near/nearcore", tag = "2.8.0-rc.1" }
near-primitives = { git = "https://github.com/near/nearcore", tag = "2.8.0-rc.1" }
near-primitives-core = { git = "https://github.com/near/nearcore", tag = "2.8.0-rc.1" }
near-primitives-crates-io = { version = "0.31", package = "near-primitives" }
# Temporary pin to pick up near-primitives 0.31 compatibility. Revert to crates.io once upstream releases.
near-lake-framework =  { git = "https://github.com/aleksuss/near-lake-framework-rs.git", rev = "13acf8c7e44e5affbcf352c169b981719433ccac" }
near-vm-runner = { git = "https://github.com/near/nearcore", tag = "2.8.0-rc.1" }
prometheus = "0.13"
reqwest = "0.12.23"
rlp = "0.6"
rocksdb = { version = "0.21", default-features = false, features = ["snappy", "zstd", "zlib", "bzip2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1.0.25"
sha2 = "0.10.9"
sha3 = "0.10.8"
# Based on: https://github.com/near/nearcore/issues/12944#issuecomment-2707438357
tempfile = "=3.14.0"
thiserror = "2.0"
tokio = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
triehash-ethereum = { git = "https://github.com/openethereum/openethereum" }
vergen-git2 = "1.0.5"

# [patch."https://github.com/aurora-is-near/aurora-engine.git"]
# aurora-engine = { path = "../aurora-engine/engine" }
# aurora-engine-transactions = { path = "../aurora-engine/engine-transactions" }
# aurora-engine-types = { path = "../aurora-engine/engine-types" }
# aurora-engine-sdk = { path = "../aurora-engine/engine-sdk" }
# aurora-engine-modexp = { path = "../aurora-engine/engine-modexp" }
# aurora-engine-hashchain = { path = "../aurora-engine/engine-hashchain" }
# engine-standalone-storage = { path = "../aurora-engine/engine-standalone-storage" }
# engine-standalone-tracing = { path = "../aurora-engine/engine-standalone-tracing" }
