[workspace]
members = [
    "engine",
    "refiner-lib",
    "refiner-types",
    "refiner-app",
    "etc/integration-tests",
]
resolver = "2"

[workspace.package]
authors = ["Aurora Labs <hello@aurora.dev>"]
version = "0.31.2-2.10.6"
edition = "2024"
homepage = "https://github.com/aurora-is-near/aurora-standalone"
repository = "https://github.com/aurora-is-near/aurora-standalone"
license = "CC0-1.0"

[workspace.dependencies]
actix = "0.13"
anyhow = "1"
aurora-engine = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.10.1", default-features = false, features = ["std", "tracing", "log", "impl-serde"] }
aurora-engine-transactions = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.10.1", default-features = false, features = ["std", "impl-serde"] }
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.10.1", default-features = false, features = ["std", "impl-serde"] }
aurora-engine-sdk = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.10.1", default-features = false, features = ["std"] }
aurora-engine-modexp = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.10.1", default-features = false, features = ["std"] }
aurora-engine-hashchain = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.10.1", default-features = false, features = ["std"] }
engine-standalone-storage = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.10.1", default-features = false }
engine-standalone-tracing = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.10.1", default-features = false, features = ["impl-serde"] }
aurora-evm = "2"
aurora-refiner-lib = { path = "refiner-lib" }
aurora-refiner-types = { path = "refiner-types" }
aurora-standalone-engine = { path = "engine" }
borsh = { version = "1", features = ["borsh-derive"] }
byteorder = "1"
clap = { version = "4", features = ["derive"] }
derive_builder = "0.20"
fixed-hash = "0.8"
hex = "0.4"
impl-serde = "0.5"
lazy_static = "1"
lru = "0.16"
near-crypto = { git = "https://github.com/near/nearcore", tag = "2.10.6" }
near-indexer = { git = "https://github.com/near/nearcore", tag = "2.10.6" }
near-primitives = { git = "https://github.com/near/nearcore", tag = "2.10.6" }
near-crypto-crates-io = { version = "0.34.0", package = "near-crypto" }
near-primitives-crates-io = { version = "0.34.0", package = "near-primitives" }
# Temporary pin to pick up near-primitives 0.31 compatibility. Revert to crates.io once upstream releases.
near-lake-framework = { git = "https://github.com/aleksuss/near-lake-framework-rs.git", rev = "4ae528a7faa8d17792ec1ac4e7f3d4eba0587bc5" }
prometheus = "0.14"
rlp = "0.6"
rocksdb = { version = "0.21", default-features = false, features = ["snappy", "zstd", "zlib", "bzip2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha3 = "0.10"
# Based on: https://github.com/near/nearcore/issues/12944#issuecomment-2707438357
tempfile = "3"
tokio = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
triehash-ethereum = { git = "https://github.com/openethereum/openethereum" }
vergen-git2 = "9"
