[package]
name = "aurora-standalone-engine"
version = "0.19.2"
authors.workspace = true
edition.workspace = true
description = "A library for interacting with the Aurora Engine deployed locally (standalone), as opposed to on-chain as a NEAR smart contract."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow.workspace = true
aurora-engine.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
aurora-engine-sdk.workspace = true
aurora-refiner-types = { path = "../refiner-types" }
base64.workspace = true
borsh.workspace = true
engine-standalone-storage = { workspace = true, features = ["snappy", "zstd", "zlib", "bzip2"] }
engine-standalone-tracing.workspace = true
hex.workspace = true
lru.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[features]
