[package]
name = "aurora-standalone-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A library for interacting with the Aurora Engine deployed locally (standalone), as opposed to on-chain as a NEAR smart contract."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow.workspace = true
aurora-engine.workspace = true
aurora-engine-modexp.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
aurora-engine-sdk.workspace = true
aurora-refiner-types = { path = "../refiner-types" }
borsh.workspace = true
bytes.workspace = true
engine-standalone-storage = { workspace = true, features = ["snappy", "zstd", "zlib", "bzip2"] }
engine-standalone-tracing.workspace = true
futures.workspace = true
hex.workspace = true
lru.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
near-parameters.workspace = true
near-primitives-core.workspace = true
near-vm-runner.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[features]
