[package]
name = "aurora-refiner"
version = "0.22.0"
authors.workspace = true
edition.workspace = true
description = "An application for creating data about Aurora transactions by consuming data from a NEAR RPC endpoint."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
near-indexer.workspace = true
aurora-refiner-lib = { path = "../refiner-lib" }
aurora-refiner-types = { path = "../refiner-types" }
aurora-standalone-engine = { path = "../engine" }
engine-standalone-storage.workspace = true
engine-standalone-tracing.workspace = true

anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
clap.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

futures.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream.workspace = true

# NEAR Lake Framework
near-lake-framework.workspace = true

[dev-dependencies]
tempfile.workspace = true
