[package]
name = "aurora-refiner"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "An application for creating data about Aurora transactions by consuming data from a NEAR RPC endpoint."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
near-indexer.workspace = true
aurora-engine-types.workspace = true
aurora-refiner-lib = { path = "../refiner-lib" }
aurora-refiner-types = { path = "../refiner-types" }
aurora-standalone-engine = { path = "../engine" }
engine-standalone-storage.workspace = true
engine-standalone-tracing.workspace = true

actix.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
clap.workspace = true
near-lake-framework.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
aurora-engine-sdk.workspace = true
tempfile.workspace = true

[features]
ext-connector = ["aurora-refiner-types/ext-connector", "aurora-refiner-lib/ext-connector", "engine-standalone-storage/ext-connector", "aurora-standalone-engine/ext-connector"]
