[package]
name = "aurora-refiner"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "An application for creating data about Aurora transactions by consuming data from a NEAR RPC endpoint."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
near-indexer.workspace = true
aurora-engine-types.workspace = true
aurora-refiner-lib.workspace = true
aurora-refiner-types.workspace = true
aurora-standalone-engine.workspace = true
engine-standalone-storage.workspace = true
engine-standalone-tracing.workspace = true
refiner-types-crates-io.workspace = true

actix.workspace = true
anyhow.workspace = true
clap.workspace = true
near-lake-framework.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
aurora-engine-sdk.workspace = true
tempfile.workspace = true

[features]
