[package]
name = "aurora-refiner-lib"
version = "0.19.0"
authors.workspace = true
edition.workspace = true
description = "A library containing logic for parsing information about Aurora transactions from full NEAR blocks."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aurora-engine.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
aurora-engine-sdk.workspace = true
aurora-refiner-types = { path = "../refiner-types" }
aurora-standalone-engine = { path = "../engine" }
engine-standalone-storage.workspace = true

anyhow.workspace = true
base64.workspace = true
borsh.workspace = true
triehash-ethereum.workspace = true
byteorder.workspace = true
derive_builder.workspace = true
hex.workspace = true
lazy_static.workspace = true
lru.workspace = true
prometheus.workspace = true
rlp.workspace = true
serde.workspace = true
sha3.workspace = true
tracing.workspace = true
fixed-hash.workspace = true
impl-serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
rocksdb.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
