[package]
name = "aurora-refiner-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A library containing logic for parsing information about Aurora transactions from full NEAR blocks."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aurora-engine.workspace = true
aurora-engine-modexp.workspace = true
aurora-engine-hashchain.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
aurora-engine-sdk.workspace = true
aurora-refiner-types.workspace = true
aurora-standalone-engine.workspace = true
engine-standalone-storage.workspace = true

anyhow.workspace = true
borsh.workspace = true
triehash-ethereum.workspace = true
byteorder.workspace = true
hex.workspace = true
lazy_static.workspace = true
lru.workspace = true
prometheus.workspace = true
rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "signal"] }
rocksdb.workspace = true

[build-dependencies]
anyhow.workspace = true
vergen-git2 = { workspace = true, features = ["build"] }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
semver.workspace = true

[features]
