[package]
name = "refiner-types-crates-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A library containing type casts for NEAR primitives from the near-lake-framework crate."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
borsh.workspace = true
near-lake-framework.workspace = true
near-crypto = "0.30.1"
near-indexer-primitives = "0.30.1"
near-primitives = "0.30.1"

serde_json.workspace = true
serde.workspace = true