[package]
name = "aurora-refiner-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A library containing definitions of data structures relating to NEAR and Aurora blocks."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
aurora-engine.workspace = true
aurora-engine-sdk.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
derive_builder.workspace = true
fixed-hash.workspace = true
impl-serde.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
nearcore.workspace = true
near-client.workspace = true
near-chain-configs.workspace = true
node-runtime.workspace = true
near-store.workspace = true
near-o11y.workspace = true
serde.workspace = true
sha3.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
ext-connector = ["aurora-engine/ext-connector"]
