[package]
name = "aurora-refiner-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A library containing definitions of data structures relating to NEAR and Aurora blocks."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
aurora-engine.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
borsh.workspace = true
derive_builder.workspace = true
fixed-hash.workspace = true
impl-serde.workspace = true
near-crypto.workspace = true
near-crypto-crates = { package = "near-crypto", version = "0.30" }
near-primitives = { workspace = true, features = ["rand"] }
near-primitives-crates = { package = "near-primitives", version = "0.30", features = ["rand"] }
serde.workspace = true
sha3.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
dev = [] # Required by the construct_fixed_hash macro
