[package]
name = "aurora-standalone-engine"
version = "0.1.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
description = "A library for interacting with the Aurora Engine deployed locally (standalone), as opposed to on-chain as a NEAR smart contract."
homepage = "https://github.com/aurora-is-near/aurora-standalone"
repository = "https://github.com/aurora-is-near/aurora-standalone"
license = "CC0-1.0"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
aurora-engine = { path = "../../aurora-engine/engine", default-features = false, features = ["std", "tracing", "log", "impl-serde"] }
aurora-engine-transactions = { path = "../../aurora-engine/engine-transactions", default-features = false, features = ["std", "impl-serde"] }
aurora-engine-types = { path = "../../aurora-engine/engine-types", default-features = false, features = ["std", "impl-serde"] }
aurora-engine-sdk = { path = "../../aurora-engine/engine-sdk", default-features = false, features = ["std"] }
aurora-refiner-types = { path = "../refiner-types" }
base64 = "0.13.0"
borsh = { version = "0.8.2" }
engine-standalone-storage = { path = "../../aurora-engine/engine-standalone-storage", default-features = false, features = ["snappy", "zstd", "zlib", "bzip2"] }
lru = "0.7.3"
tracing = "0.1"

[dev-dependencies]

[features]
