[package]
name = "aurora-refiner-app-integration-tests"
version = "0.23.2"
authors.workspace = true
edition.workspace = true
description = "Integration tests for the Aurora Refiner application."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
vte = "0.11.1"
